# MemorEyes

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  test_model.py
app/routes/: episodes.py  face.py  memory.py  persons.py  thoughts.py
core/: db.py
core/face/: detector.py  embeddings.py
core/memory/: models.py  search.py
core/nlp/: asr_whisper.py  thoughts_service.py
core/people/: models.py  service.py
core/utils/: image.py
demo/: live_mvp.py
docs/: system_overview.md
memoreyes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  manual_test_detector.py  manual_test_embeddings.py  test_create_with_image_route.py  test_last_seen_at_update.py  test_people_service.py
