[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memoreyes"
version = "0.1.0"
description = "MemorEyes Core Package"
authors = [{ name = "Yannis Lebbar" }]
license = { text = "Proprietary" }
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "fastapi",
    "uvicorn",
    "pillow",
    "faiss-cpu",
    "sqlalchemy",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]
